// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should match the snapshot of when it recieves the planet props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    climate="padawan"
    name="padawan"
    population="padawan"
    residents="padawan"
    terrain="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        <div
          className="card planet-card null"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    <span
                              className="card-key"
                    >
                              name:
                    </span>
                     
                    padawan
          </h2>
          <h3>
                    <span
                              className="card-key"
                    >
                              terrain: 
                    </span>
                    padawan
          </h3>
          <h4>
                    <span
                              className="card-key"
                    >
                              population: 
                    </span>
                    padawan
          </h4>
          <h5>
                    <span
                              className="card-key"
                    >
                              climate: 
                    </span>
                    padawan
          </h5>
          <h4>
                    <span
                              className="card-key"
                    >
                              residents: 
                    </span>
                    padawan
          </h4>
</div>,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              <span
                            className="card-key"
              >
                            name:
              </span>
               
              padawan
</h2>,
            <h3>
              <span
                            className="card-key"
              >
                            terrain: 
              </span>
              padawan
</h3>,
            <h4>
              <span
                            className="card-key"
              >
                            population: 
              </span>
              padawan
</h4>,
            <h5>
              <span
                            className="card-key"
              >
                            climate: 
              </span>
              padawan
</h5>,
            <h4>
              <span
                            className="card-key"
              >
                            residents: 
              </span>
              padawan
</h4>,
          ],
          "className": "card planet-card null",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  name:
</span>,
                " ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "name:",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "name:",
                "type": "span",
              },
              " ",
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  terrain: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "terrain: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "terrain: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  population: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "population: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "population: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  climate: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "climate: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "climate: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  residents: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "residents: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "residents: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h4",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          <div
            className="card planet-card null"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        <span
                                    className="card-key"
                        >
                                    name:
                        </span>
                         
                        padawan
            </h2>
            <h3>
                        <span
                                    className="card-key"
                        >
                                    terrain: 
                        </span>
                        padawan
            </h3>
            <h4>
                        <span
                                    className="card-key"
                        >
                                    population: 
                        </span>
                        padawan
            </h4>
            <h5>
                        <span
                                    className="card-key"
                        >
                                    climate: 
                        </span>
                        padawan
            </h5>
            <h4>
                        <span
                                    className="card-key"
                        >
                                    residents: 
                        </span>
                        padawan
            </h4>
</div>,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                <span
                                className="card-key"
                >
                                name:
                </span>
                 
                padawan
</h2>,
              <h3>
                <span
                                className="card-key"
                >
                                terrain: 
                </span>
                padawan
</h3>,
              <h4>
                <span
                                className="card-key"
                >
                                population: 
                </span>
                padawan
</h4>,
              <h5>
                <span
                                className="card-key"
                >
                                climate: 
                </span>
                padawan
</h5>,
              <h4>
                <span
                                className="card-key"
                >
                                residents: 
                </span>
                padawan
</h4>,
            ],
            "className": "card planet-card null",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    name:
</span>,
                  " ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name:",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "name:",
                  "type": "span",
                },
                " ",
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    terrain: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "terrain: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "terrain: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    population: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "population: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "population: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    climate: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "climate: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "climate: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    residents: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "residents: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "residents: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h4",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card component should match the snapshot when it receives vehicle props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    model="padawan"
    name="padawan"
    passengerCount="padawan"
    vehicleClass="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card vehicle-card null"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    <span
                              className="card-key"
                    >
                              name: 
                    </span>
                    padawan
          </h2>
          <h3>
                    <span
                              className="card-key"
                    >
                              model: 
                    </span>
                    padawan
          </h3>
          <h4>
                    <span
                              className="card-key"
                    >
                              class: 
                    </span>
                    padawan
          </h4>
          <h5>
                    <span
                              className="card-key"
                    >
                              passengers: 
                    </span>
                    padawan
          </h5>
</div>,
        null,
        null,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              <span
                            className="card-key"
              >
                            name: 
              </span>
              padawan
</h2>,
            <h3>
              <span
                            className="card-key"
              >
                            model: 
              </span>
              padawan
</h3>,
            <h4>
              <span
                            className="card-key"
              >
                            class: 
              </span>
              padawan
</h4>,
            <h5>
              <span
                            className="card-key"
              >
                            passengers: 
              </span>
              padawan
</h5>,
          ],
          "className": "card vehicle-card null",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  name: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "name: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "name: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  model: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "model: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "model: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  class: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "class: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "class: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  passengers: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "passengers: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "passengers: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h5",
          },
        ],
        "type": "div",
      },
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card vehicle-card null"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        <span
                                    className="card-key"
                        >
                                    name: 
                        </span>
                        padawan
            </h2>
            <h3>
                        <span
                                    className="card-key"
                        >
                                    model: 
                        </span>
                        padawan
            </h3>
            <h4>
                        <span
                                    className="card-key"
                        >
                                    class: 
                        </span>
                        padawan
            </h4>
            <h5>
                        <span
                                    className="card-key"
                        >
                                    passengers: 
                        </span>
                        padawan
            </h5>
</div>,
          null,
          null,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                <span
                                className="card-key"
                >
                                name: 
                </span>
                padawan
</h2>,
              <h3>
                <span
                                className="card-key"
                >
                                model: 
                </span>
                padawan
</h3>,
              <h4>
                <span
                                className="card-key"
                >
                                class: 
                </span>
                padawan
</h4>,
              <h5>
                <span
                                className="card-key"
                >
                                passengers: 
                </span>
                padawan
</h5>,
            ],
            "className": "card vehicle-card null",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    name: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "name: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    model: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "model: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "model: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    class: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "class: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "class: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    passengers: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "passengers: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "passengers: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h5",
            },
          ],
          "type": "div",
        },
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card component should match the snapshot when it recieves people props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    homeworld="padawan"
    homeworldPopulation="padawan"
    name="padawan"
    species="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="card person-card null"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    <span
                              className="card-key"
                    >
                              name: 
                    </span>
                    padawan
          </h2>
          <h3>
                    <span
                              className="card-key"
                    >
                              species: 
                    </span>
                    padawan
          </h3>
          <h4>
                    <span
                              className="card-key"
                    >
                              homeworld: 
                    </span>
                    padawan
          </h4>
          <h5>
                    <span
                              className="card-key"
                    >
                              homeworld population: 
                    </span>
                    padawan
          </h5>
</div>,
        null,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              <span
                            className="card-key"
              >
                            name: 
              </span>
              padawan
</h2>,
            <h3>
              <span
                            className="card-key"
              >
                            species: 
              </span>
              padawan
</h3>,
            <h4>
              <span
                            className="card-key"
              >
                            homeworld: 
              </span>
              padawan
</h4>,
            <h5>
              <span
                            className="card-key"
              >
                            homeworld population: 
              </span>
              padawan
</h5>,
          ],
          "className": "card person-card null",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  name: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "name: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "name: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  species: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "species: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "species: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  homeworld: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "homeworld: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "homeworld: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="card-key"
>
                  homeworld population: 
</span>,
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "homeworld population: ",
                  "className": "card-key",
                },
                "ref": null,
                "rendered": "homeworld population: ",
                "type": "span",
              },
              "padawan",
            ],
            "type": "h5",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="card person-card null"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        <span
                                    className="card-key"
                        >
                                    name: 
                        </span>
                        padawan
            </h2>
            <h3>
                        <span
                                    className="card-key"
                        >
                                    species: 
                        </span>
                        padawan
            </h3>
            <h4>
                        <span
                                    className="card-key"
                        >
                                    homeworld: 
                        </span>
                        padawan
            </h4>
            <h5>
                        <span
                                    className="card-key"
                        >
                                    homeworld population: 
                        </span>
                        padawan
            </h5>
</div>,
          null,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                <span
                                className="card-key"
                >
                                name: 
                </span>
                padawan
</h2>,
              <h3>
                <span
                                className="card-key"
                >
                                species: 
                </span>
                padawan
</h3>,
              <h4>
                <span
                                className="card-key"
                >
                                homeworld: 
                </span>
                padawan
</h4>,
              <h5>
                <span
                                className="card-key"
                >
                                homeworld population: 
                </span>
                padawan
</h5>,
            ],
            "className": "card person-card null",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    name: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "name: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    species: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "species: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "species: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    homeworld: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "homeworld: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "homeworld: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="card-key"
>
                    homeworld population: 
</span>,
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "homeworld population: ",
                    "className": "card-key",
                  },
                  "ref": null,
                  "rendered": "homeworld population: ",
                  "type": "span",
                },
                "padawan",
              ],
              "type": "h5",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
